# drdroid-debug-toolkit

./: .gitignore  EXAMPLE_USAGE_README.md  README.md  __init__.py  claude.md  credentials.yaml  credentials_example.yaml  example_usage.py  exceptions.py  pyproject.toml  regenerate_protos.py  requirements.txt  sdk.py  sdk_v2.py  settings_stub.py  setup.py
core/: sdk_base.py  sdk_factory.py
core/integrations/: source_manager.py  source_metadata_extractor.py  source_metadata_extractor_facade.py
core/integrations/source_api_processors/: argocd_api_processor.py  aws_boto_3_api_processor.py  bigquery_api_processor.py  datadog_api_processor.py  datadog_oath_api_processor.py  eks_api_processor.py  elastic_search_api_processor.py  gke_api_processor.py  grafana_loki_api_processor.py  jenkins_api_processor.py  lambda_function_processor.py  mimir_api_processor.py  no_op_processor.py  open_search_api_processor.py  ops_genie_api_processor.py  rootly_api_processor.py  sentry_api_processor.py  signoz_api_processor.py  smtp_api_processor.py  vpc_api_processor.py
core/integrations/source_managers/: argocd_source_manager.py  bash_source_manager.py  datadog_oauth_soruce_manager.py  eks_source_manager.py  github_actions_source_manager.py  postgres_source_manager.py  posthog_source_manager.py  sentry_source_manager.py  signoz_source_manager.py  slack_source_manager.py  smtp_source_manager.py
core/integrations/source_manangers/: api_source_manager.py  azure_source_manager.py  clickhouse_source_manager.py  cloudwatch_source_manager.py  datadog_source_manager.py  documentation_source_manager.py  gcm_source_manager.py  github_source_manager.py  grafana_loki_source_manager.py  grafana_source_manager.py  jenkins_source_manager.py  mongodb_source_manager.py  ms_teams_source_manager.py  rootly_source_manager.py  signoz_source_manager.py
core/integrations/source_metadata_extractors/: argocd_metadata_extractor.py  bash_metadata_extractor.py  clickhouse_metadata_extractor.py  eks_metadata_extractor.py  elastic_search_metadata_extractor.py  gcm_metadata_extractor.py  github_metadata_extractor.py  grafana_metadata_extractor.py  jira_metadata_extractor.py  kubectl_metadata_extractor.py  open_search_metadata_extractor.py  signoz_metadata_extractor.py  sql_database_connection_metadata_extractor.py
core/integrations/utils/: executor_utils.py
core/protos/: __init__.py
core/protos/assets/: asset_pb2.py  azure_asset_pb2.py  clickhouse_asset_pb2.py  cloudwatch_asset_pb2.py  (+9 more)
core/sources/: bash_sdk.py  cloudwatch_sdk.py  grafana_sdk.py  kubernetes_sdk.py  sentry_sdk.py  signoz_sdk.py  template_sdk.py
core/utils/: decorators.py  playbooks_client.py  proto_utils.py  static_mappings.py
drdroid_debug_toolkit/: __init__.py  cli.py  credentials_example.yaml  sdk_v2.py  setup.py
drdroid_debug_toolkit/core/: __init__.py  proto_codegen.sh  sdk_base.py  sdk_factory.py  settings.py
(+544 files in other folders)
