[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drdroid-debug-toolkit"
version = "1.0.0"
description = "A Python SDK for integrating with monitoring and observability platforms"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DroidSpace", email = "support@droidspace.com"}
]
maintainers = [
    {name = "DroidSpace", email = "support@droidspace.com"}
]
keywords = ["monitoring", "observability", "grafana", "signoz", "prometheus", "clickhouse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0.0",
    "requests>=2.28.0",
    "protobuf>=4.21.0,<6.0.0",
    "grpcio-tools>=1.59.0",
    "paramiko>=3.4.0",
    "kubernetes>=26.0.0",
    "boto3>=1.37.0",
    "botocore>=1.37.0",
    "azure-identity>=1.16.0",
    "azure-mgmt-loganalytics>=12.0.0",
    "azure-monitor-query>=1.3.0",
    "google-auth>=2.35.0",
    "google-api-python-client>=2.146.0",
    "google-cloud-bigquery>=3.25.0",
    "clickhouse-connect>=0.6.0",
    "pymongo>=3.9.0",
    "psycopg2-binary>=2.9.0",
    "PyMySQL>=1.1.0",
    "sqlalchemy>=1.4.0",
    "Django==4.1.4",
    "elasticsearch>=8.15.0",
    "gql>=3.5.0",
    "slack_sdk>=3.36.0",
    "openai>=1.35.0",
    "opsgenie-sdk>=2.1.0",
    "datadog-api-client>=2.15.0",
    "requests-oauthlib>=2.0.0",
    "requests-toolbelt>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DrDroidLab/drdroid-debug-toolkit"
Documentation = "https://github.com/DrDroidLab/drdroid-debug-toolkit/blob/main/README.md"
Repository = "https://github.com/DrDroidLab/drdroid-debug-toolkit"
"Bug Tracker" = "https://github.com/DrDroidLab/drdroid-debug-toolkit/issues"

[project.scripts]
drdroid-debug-toolkit = "drdroid_debug_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drdroid_debug_toolkit*"]

[tool.setuptools.package-data]
drdroid_debug_toolkit = ["*.yaml", "*.yml"]

[tool.setuptools.cmdclass]
develop = "drdroid_debug_toolkit.setup:DevelopCommand"
install = "drdroid_debug_toolkit.setup:InstallCommand"
generate_protobuf = "drdroid_debug_toolkit.setup:GenerateProtobufCommand" 